--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width" />
+		<script async src="https://cdn.jsdelivr.net/pyodide/v0.21.3/full/pyodide.js"></script>
+		<title>MultiCut-Game</title>
 		%sveltekit.head%
 	</head>
 	<body>
