--- a/src/app.html
+++ b/src/app.html
@@ -12,19 +12,19 @@
         <meta name="viewport" content="width=device-width, user-scalable=no" />
         <!-- Primary Meta Tags -->
         <title>MultiCut-Game</title>
-        <meta name="title" content="MultiCut-Game" />
-        <meta name="description" content="Learn geography interactively." />
+        <meta name="title" content="Multicut-Game" />
+        <meta name="description" content="Explore NP-hard Multicut problem playfully." />
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
-        <meta property="og:url" content="https://MultiCut-Game.wout.space/" />
-        <meta property="og:title" content="MultiCut-Game" />
-        <meta property="og:description" content="Learn geography interactively." />
+        <meta property="og:url" content="https://multi-cut-game.vercel.app/" />
+        <meta property="og:title" content="Multicut-Game" />
+        <meta property="og:description" content="Explore NP-hard Multicut problem playfully." />
         <meta property="og:image" content="%sveltekit.assets%/meta.png" />
         <!-- Twitter -->
         <meta property="twitter:card" content="summary_large_image" />
-        <meta property="twitter:url" content="https://MultiCut-Game.wout.space/" />
-        <meta property="twitter:title" content="MultiCut-Game" />
-        <meta property="twitter:description" content="Learn geography interactively." />
+        <meta property="twitter:url" content="https://multi-cut-game.vercel.app/" />
+        <meta property="twitter:title" content="Multicut-Game" />
+        <meta property="twitter:description" content="Explore NP-hard Multicut problem playfully." />
         <meta property="twitter:image" content="%sveltekit.assets%/meta.png" />
         %sveltekit.head%
     </head>
