--- a/src/app.html
+++ b/src/app.html
@@ -29,6 +29,7 @@
         %sveltekit.head%
     </head>
     <body class="overflow-hidden">
+        <script src="clp-wasm.js" type="text/javascript"></script><!---->
         <div id="svelte" class="bg-background">%sveltekit.body%</div>
     </body>
 </html>
